tests/specs/ecosystem/okikio/transferables/1_0_1.test
okikio/transferables/1.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS7017 [ERROR]: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
 */ export const AudioData = globalThis.AudioData;
                                        ~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:46:41

TS7017 [ERROR]: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
 */ export const VideoFrame = globalThis.VideoFrame;
                                         ~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:66:42

TS7017 [ERROR]: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
 */ export const OffscreenCanvas = globalThis.OffscreenCanvas;
                                              ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:77:47

TS7017 [ERROR]: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
 */ export const RTCDataChannel = globalThis.RTCDataChannel;
                                             ~~~~~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:87:46

TS2749 [ERROR]: 'AudioData' refers to a value, but is being used as a type here. Did you mean 'typeof AudioData'?
    at file://<tmpdir>/src/mod.ts:163:134

TS2749 [ERROR]: 'VideoFrame' refers to a value, but is being used as a type here. Did you mean 'typeof VideoFrame'?
    at file://<tmpdir>/src/mod.ts:163:160

TS2749 [ERROR]: 'OffscreenCanvas' refers to a value, but is being used as a type here. Did you mean 'typeof OffscreenCanvas'?
    at file://<tmpdir>/src/mod.ts:163:173

TS2749 [ERROR]: 'RTCDataChannel' refers to a value, but is being used as a type here. Did you mean 'typeof RTCDataChannel'?
    at file://<tmpdir>/src/mod.ts:163:191

Found 8 errors.

